[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scripts/world/chest.gd" id="1"]

[sub_resource type="BoxShape3D" id="box_collision"]
size = Vector3(0.8, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="chest_mat"]
albedo_color = Color(0.45, 0.3, 0.15, 1)
roughness = 0.9

[sub_resource type="StandardMaterial3D" id="metal_mat"]
albedo_color = Color(0.3, 0.3, 0.35, 1)
metallic = 0.6
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="lock_mat"]
albedo_color = Color(0.7, 0.6, 0.2, 1)
metallic = 0.8
roughness = 0.4

[sub_resource type="BoxMesh" id="body_mesh"]
size = Vector3(0.8, 0.5, 0.5)

[sub_resource type="BoxMesh" id="lid_mesh"]
size = Vector3(0.85, 0.1, 0.55)

[sub_resource type="BoxMesh" id="lock_mesh"]
size = Vector3(0.1, 0.15, 0.1)

[node name="Chest" type="StaticBody3D"]
script = ExtResource("1")
is_locked = true
lock_difficulty = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("box_collision")

[node name="MeshRoot" type="Node3D" parent="."]

[node name="BodyMesh" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("body_mesh")
surface_material_override/0 = SubResource("chest_mat")

[node name="LidMesh" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
mesh = SubResource("lid_mesh")
surface_material_override/0 = SubResource("metal_mat")

[node name="LockIndicator" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.3)
mesh = SubResource("lock_mesh")
surface_material_override/0 = SubResource("lock_mat")
